[project]
name = "ntlog"
version = "0.0"
description = "Append a log file to an running NestedText log"
readme = "README.rst"
keywords = ["nestedtext", "logging"]
authors = [
    {name = "Ken Kundert"},
]
requires-python = ">=3.6"
dependencies = [
    "arrow>=0.15",
    "docopt",
    "inform>=1.28",
    "nestedtext",
]

[project.urls]
homepage = "https://github.com/kenkundert/ntlog"
documentation = "https://github.com/KenKundert/ntlog/blob/master/README.rst"
repository = "https://github.com/kenkundert/ntlog"
changelog = "https://github.com/KenKundert/ntlog/blob/master/CHANGELOG.rst"

[project.scripts]
ntlog = "ntlog:main.main"

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"
