[project]
name = "ntlog"
version = "0.2"
description = "Append a log file to an running NestedText log"
readme = "README.rst"
keywords = ["nestedtext", "logging"]
authors = [
    {name = "Ken Kundert"},
]
requires-python = ">=3.6"
dependencies = [
    "arrow>=0.15",
    "docopt",
    "inform>=1.28",
    "nestedtext",
    "quantiphy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.scripts]
ntlog = "ntlog:main.main"

[project.urls]
homepage = "https://github.com/kenkundert/ntlog"
documentation = "https://github.com/KenKundert/ntlog/blob/master/README.rst"
repository = "https://github.com/kenkundert/ntlog"
changelog = "https://github.com/KenKundert/ntlog/blob/master/CHANGELOG.rst"

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"
